[gd_scene load_steps=21 format=3 uid="uid://dd3una7xiwebi"]

[ext_resource type="Texture2D" uid="uid://b1eiwylhm4tnn" path="res://Sprites/Backgrounds/Grey Paper.png" id="1_r5l72"]
[ext_resource type="Texture2D" uid="uid://cgfv5u4xbdvha" path="res://Sprites/Heroes/Naga-Debug.png" id="2_50ct6"]
[ext_resource type="Script" uid="uid://bsg6eju36vciq" path="res://Scripts/Enemies/EnemyManager.gd" id="2_ak5v8"]
[ext_resource type="Script" uid="uid://cfgce3sap4c5" path="res://Scripts/Heroes/NagaWitch.gd" id="2_oho3u"]
[ext_resource type="PackedScene" uid="uid://h3po5c4sc1c1" path="res://Scenes/Prefabs/Projectiles/bite_proj.tscn" id="3_d3awe"]
[ext_resource type="PackedScene" uid="uid://vb0jtea1j2qr" path="res://Scenes/Prefabs/Projectiles/venom_proj.tscn" id="4_yglu3"]
[ext_resource type="PackedScene" uid="uid://d0pb5ufv28qx" path="res://Scenes/Prefabs/debug_baddie.tscn" id="5_ak5v8"]
[ext_resource type="PackedScene" uid="uid://b0m2f2lbjlt3c" path="res://Scenes/Prefabs/Projectiles/snake_bind_proj.tscn" id="5_d3awe"]
[ext_resource type="PackedScene" uid="uid://c6vk01oxplxsb" path="res://Scenes/Prefabs/debug_elite.tscn" id="6_x033f"]
[ext_resource type="PackedScene" uid="uid://dvoaqadsi4fwd" path="res://Scenes/Prefabs/Projectiles/gaze_proj.tscn" id="6_yglu3"]
[ext_resource type="Texture2D" uid="uid://bbyi55k4eh5jj" path="res://Sprites/UI/HUD/Ability Icon.png" id="8_4blnk"]
[ext_resource type="Texture2D" uid="uid://25iue23na4x4" path="res://Sprites/UI/HUD/Timer Fade Mask.png" id="9_tnimv"]
[ext_resource type="Script" uid="uid://dnp8o6im256hj" path="res://Scripts/UI/AbilityTimer.gd" id="10_4qg1e"]
[ext_resource type="Texture2D" uid="uid://c5sbxdbbnl7w7" path="res://Sprites/UI/HUD/Venom Spit_Debug.png" id="11_i0miu"]
[ext_resource type="Texture2D" uid="uid://bs1p2ifds7wp3" path="res://Sprites/UI/HUD/Venom Fang_Debug.png" id="12_6bfml"]
[ext_resource type="Texture2D" uid="uid://xflt2cgchh3l" path="res://Sprites/UI/HUD/Snake Bing_Debug.png" id="13_0g4ye"]
[ext_resource type="Texture2D" uid="uid://ba4gn6mxib3lk" path="res://Sprites/UI/HUD/Reptilian Gaze_Debug.png" id="14_soh27"]
[ext_resource type="Texture2D" uid="uid://c2c843oetthbx" path="res://Sprites/UI/HUD/Timer Mask.png" id="15_733rx"]
[ext_resource type="PackedScene" uid="uid://mmy61co7chur" path="res://Scenes/Prefabs/debug_rangie.tscn" id="18_6bfml"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hb2xm"]
size = Vector2(66, 98)

[node name="Node2D" type="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(9, -2)
texture = ExtResource("1_r5l72")

[node name="Player" type="CharacterBody2D" parent="." node_paths=PackedStringArray("HPBar", "BarrierHPBar")]
position = Vector2(1, 0)
collision_mask = 0
motion_mode = 1
script = ExtResource("2_oho3u")
biteAttack = ExtResource("3_d3awe")
spitAttack = ExtResource("4_yglu3")
snakeAttack = ExtResource("5_d3awe")
gazeAttack = ExtResource("6_yglu3")
primTime = 1.5
scndTime = 4.0
tertTime = 7.0
HPBar = NodePath("CurrentHP")
BarrierHPBar = NodePath("OverHP")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_hb2xm")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
position = Vector2(4, 0)
texture = ExtResource("2_50ct6")

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="MaxHP" type="Line2D" parent="Player"]
position = Vector2(-30, -60)
points = PackedVector2Array(0, 0, 60, 0)
default_color = Color(1, 0, 0, 1)

[node name="CurrentHP" type="Line2D" parent="Player"]
position = Vector2(-30, -60)
points = PackedVector2Array(0, 0, 60, 0)
default_color = Color(0, 1, 0, 1)

[node name="OverHP" type="Line2D" parent="Player"]
position = Vector2(-30, -60)
points = PackedVector2Array(0, 0, 0, 0)
default_color = Color(0, 1, 1, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 1154.0
offset_bottom = 648.0

[node name="Debug_Level" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_right = 0.007
offset_left = -0.08500004
offset_right = 42.915
offset_bottom = 17.0
action_mode = 0
text = "Level Up"

[node name="Debug_Elite" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_right = 0.007
offset_left = -0.08500004
offset_top = 79.0
offset_right = 115.915
offset_bottom = 110.0
action_mode = 0
text = "Spawn Elite"

[node name="Debug_Enemy" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_right = 0.007
offset_left = -0.08500004
offset_top = 41.0
offset_right = 74.915
offset_bottom = 72.0
action_mode = 0
text = "Spawn Enemy"

[node name="Debug_Barrier" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.007
anchor_right = 0.007
offset_left = -0.08500004
offset_top = 115.0
offset_right = 115.915
offset_bottom = 146.0
action_mode = 0
text = "Give Barrier"

[node name="Primary Ability Icon" type="TextureProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1500.0
offset_top = 230.0
offset_right = 1680.0
offset_bottom = 410.0
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(30, 30)
step = 0.01
fill_mode = 5
texture_under = ExtResource("8_4blnk")
texture_progress = ExtResource("9_tnimv")
script = ExtResource("10_4qg1e")
abilIconBase = ExtResource("11_i0miu")
abilIconAlt = ExtResource("12_6bfml")
abilIconBasePrestA = ExtResource("11_i0miu")
abilIconAltPrestA = ExtResource("12_6bfml")
abilIconBasePrestB = ExtResource("11_i0miu")
abilIconAltPrestB = ExtResource("12_6bfml")

[node name="Secondary Ability Icon" type="TextureProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1500.0
offset_top = 300.0
offset_right = 1680.0
offset_bottom = 480.0
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(30, 30)
step = 0.01
fill_mode = 5
texture_under = ExtResource("8_4blnk")
texture_progress = ExtResource("9_tnimv")
script = ExtResource("10_4qg1e")
abilIconBase = ExtResource("13_0g4ye")
abilIconBasePrestA = ExtResource("13_0g4ye")
abilIconBasePrestB = ExtResource("13_0g4ye")
ability = 1

[node name="Tertiary Ability Icon" type="TextureProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1500.0
offset_top = 370.0
offset_right = 1680.0
offset_bottom = 550.0
scale = Vector2(0.3, 0.3)
pivot_offset = Vector2(30, 30)
step = 0.01
fill_mode = 5
texture_under = ExtResource("8_4blnk")
texture_progress = ExtResource("9_tnimv")
script = ExtResource("10_4qg1e")
abilIconBase = ExtResource("14_soh27")
abilIconBasePrestA = ExtResource("14_soh27")
abilIconBasePrestB = ExtResource("14_soh27")
ability = 2

[node name="Ultimate Ability Icon" type="TextureProgressBar" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1490.0
offset_top = 440.0
offset_right = 1670.0
offset_bottom = 620.0
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(31.5, 31.5)
step = 0.01
fill_mode = 5
texture_under = ExtResource("8_4blnk")
texture_progress = ExtResource("9_tnimv")
script = ExtResource("10_4qg1e")
abilIconBase = ExtResource("15_733rx")
abilIconBasePrestA = ExtResource("15_733rx")
abilIconBasePrestB = ExtResource("15_733rx")
ability = 3

[node name="EnemyManager" type="Node" parent="."]
script = ExtResource("2_ak5v8")
Debug_Baddie = ExtResource("5_ak5v8")
Debug_Rangie = ExtResource("18_6bfml")
Debug_Elite = ExtResource("6_x033f")

[connection signal="pressed" from="CanvasLayer/Control/Debug_Level" to="Player" method="level_up"]
[connection signal="pressed" from="CanvasLayer/Control/Debug_Elite" to="EnemyManager" method="debug_spawn_elite"]
[connection signal="pressed" from="CanvasLayer/Control/Debug_Enemy" to="EnemyManager" method="debug_spawn"]
[connection signal="pressed" from="CanvasLayer/Control/Debug_Barrier" to="Player" method="debug_barrier"]
